manifests/sit-user-template/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NS}
  labels:
    env: sit
    purpose: exploratory-testing
    managed-by: create-sit-user
    sit-user: ${USERNAME}
